tests/grammar/schema/union/fail/fail_4/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:5:24
  |
5 | _personA = _personA | {"name" = 123.0}
  |                        ^ expected str, got float(123)
  |
 --> ${CWD}/main.k:2:5
  |
2 |     name: str = "Alice"
  |     ^ variable is defined here, its type is str, but got float(123)
  |